--- a/GetItDone/Base.lproj/Main.storyboard
+++ b/GetItDone/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="41v-jx-bMq" id="n1H-Zw-AOm"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="GetItDone" id="bJW-zr-GH7"/>
+                    <navigationItem key="navigationItem" title="GetItDone" id="bJW-zr-GH7">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="5IT-pe-dIw">
+                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="41v-jx-bMq" id="vmX-JR-qux"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SDF-9p-ywd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
